# api/swagger/swagger-v1-full.yaml
@@ -1233,7 +1233,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/full_tracks_response'
-  /tracks/feeling_lucky:
+  /tracks/feeling-lucky:
     get:
       tags:
       - tracks
@@ -1250,8 +1250,11 @@ paths:
         description: Number of tracks to fetch
         schema:
           type: integer
-          default: 25
+          default: 10
+          minimum: 1
+          maximum: 100
       - name: with_users
+        deprecated: true
         in: query
         description: Boolean to include user info with tracks
         schema:
@@ -1262,7 +1265,7 @@ paths:
         description: Fetch tracks from users with at least this number of followers
         schema:
           type: integer
-          default: 100
+          minimum: 1
       responses:
         "200":
           description: Success
@@ -1270,6 +1273,9 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/full_tracks_response'
+        "400":
+          description: Bad request
+          content: {}
   /tracks/most_loved:
     get:
       tags:
